@@ -108,8 +108,11 @@ WebInspector.NativeSnapshotNode.prototype = {
     {
         var node = this;
         var viewProperties = null;
+        var dimmed = false;
         while (!viewProperties || viewProperties._fillStyle === "inherit") {
             viewProperties = WebInspector.MemoryBlockViewProperties._forMemoryBlock(node._nodeData);
+            if (viewProperties._fillStyle === "inherit")
+                dimmed = true;
             node = node.parent;
         }
 
@@ -139,6 +142,8 @@ WebInspector.NativeSnapshotNode.prototype = {
         barDiv.appendChild(percentDiv);
 
         var barHolderDiv = document.createElement("div");
+        if (dimmed)
+            barHolderDiv.className = "dimmed";
         barHolderDiv.appendChild(barDiv);
         cell.appendChild(barHolderDiv);
 
